--- a/front/html/login.html
+++ b/front/html/login.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>NewAccount</title> 
+	<title>Connexion</title> 
 </head>
 
 <body class="container-fluid bg-light h-100">
